Channel sheules auto create timer Signed-off-by: HNDITDushan <s.t.dushan@mail.com>

--- a/src/main/webapp/channel/channel_agent_credit_bulk_update.xhtml
+++ b/src/main/webapp/channel/channel_agent_credit_bulk_update.xhtml
@@ -48,7 +48,7 @@
                         <p:inputText autocomplete="off" disabled="#{!dataAdministrationController.bool4}" id="txt3" value="#{dataAdministrationController.val4}" >
                         </p:inputText>
                         <p:commandButton value="Update" action="#{dataAdministrationController.changeCreditLimts}" 
-                                         ajax="false" />
+                                         ajax="false" disabled="#{!webUserController.hasPrivilege('ChannellingEditCreditLimitAdminLevel')}" />
                     </h:panelGrid>
                 </p:panel>
                 <p:panel>
