--- a/src/main/webapp/channel/institutions.xhtml
+++ b/src/main/webapp/channel/institutions.xhtml
@@ -18,7 +18,7 @@
 
 
 
-                <p:panel header="Manage Channel Agents" styleClass="verticalAndHorizontalCenteringLarge">
+                <p:panel header="Manage Channel Agents" >
 
                     <div id="Temp" style="position: relative;left: 0%;">
                         <h:panelGrid id ="gpVeda" columns="2" >
@@ -32,7 +32,7 @@
                                         </h:inputText>
 
                                         <p:selectOneListbox  id="lstSelect"   value="#{institutionController.agency}" style="min-width: 223px; height: 300px;">
-                                            <f:selectItems  value="#{institutionController.selectedAgencies}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
+                                            <f:selectItems  value="#{institutionController.selectedAgencies}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name} (#{myItem.institutionCode })" ></f:selectItems>
                                             <p:ajax event="change"   update="gpDetail" process="lstSelect" >
                                             </p:ajax>
                                         </p:selectOneListbox>
