--- a/src/main/webapp/channel/institutions_udate_credit_limit.xhtml
+++ b/src/main/webapp/channel/institutions_udate_credit_limit.xhtml
@@ -79,7 +79,7 @@
                                         
                                          <h:outputText value="Balance" >                                        
                                         </h:outputText>
-                                        <h:inputText autocomplete="off" value="#{institutionController.current.ballance}" disabled="true" >
+                                        <h:inputText autocomplete="off" value="#{institutionController.current.ballance}" disabled="#{!webUserController.hasPrivilege('ChannellingEditCreditLimitAdminLevel')}" >
                                         </h:inputText>
 
                                     </h:panelGrid>
