--- a/src/main/webapp/reportCashier/report_cashier_detailed_by_user.xhtml
+++ b/src/main/webapp/reportCashier/report_cashier_detailed_by_user.xhtml
@@ -23,7 +23,7 @@
                             
                             <br/>
 
-                            <h:outputLabel value="Cashier  Report : #{commonReport.webUser.webUserPerson.name}"/>
+                            <h:outputLabel value="#{commonReport.header} (Detail) : #{commonReport.webUser.webUserPerson.name}"/>
                             <h:outputLabel value="&emsp;From :"/>
                             <h:outputLabel value="#{commonReport.fromDate}">
                                 <f:convertDateTime pattern="dd MMM yyyy hh:mm:ss a"/>
