--- a/src/main/webapp/channel/channel_payment_staff_bill.xhtml
+++ b/src/main/webapp/channel/channel_payment_staff_bill.xhtml
@@ -65,7 +65,7 @@
                                 </h:panelGrid>
 
 
-                                <p:dataTable id="tblFee" value="#{channelStaffPaymentBillController.dueBillFees}" selection="#{channelStaffPaymentBillController.payingBillFees}" var="bf" rowKey="#{bf.id}" >
+                                <p:dataTable id="tblFee" value="#{channelStaffPaymentBillController.dueBillFees}" selection="#{channelStaffPaymentBillController.payingBillFees}" rowIndexVar="i" var="bf" rowKey="#{bf.id}" >
 
                                     <f:ajax  event="rowSelectCheckbox" execute="tblFee" listener="#{channelStaffPaymentBillController.performCalculations()}"   
                                              render=":#{p:component('scStaff')}  :#{p:component('lblDue')} :#{p:component('lblPay')} tblFee"  />  
@@ -81,6 +81,10 @@
 
                                     <p:column selectionMode="multiple" ></p:column>
 
+                                    <p:column headerText="No">
+                                        <h:outputLabel value="#{i+1}">
+                                        </h:outputLabel>
+                                    </p:column>
                                     <p:column headerText="Bill Id">
                                         <h:outputLabel value="#{bf.bill.insId}">
                                         </h:outputLabel>
